We can use originalfile field from File object. There is no need to pass fileName parameter
